--- a/style.css
+++ b/style.css
@@ -1,16 +1,40 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', 'sans-serif';
     margin: 0px;
     padding: 0px;
 }
 
-
+/* TOP AND BOTTOM NAVIGATION BAR STYLES*/
 .navTop {
     background-color: #F8F2ED;
-
+    padding: 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    padding: 12px 30px;
+    width: 350px;
+    border-radius: 10px;
+}
+.search:hover {
+    border: 2px solid #D96971;
+}
+.searchInput {
+    border: none;
+    box-sizing: border-box;
+    width: 100%;
+    background-color: transparent;
+}
+.searchInput::placeholder {
+    font-size: 18px;
 }
 .navBottom {
     background-color: #282329;
     color: #FFFFFF;
-    
+
 }
