--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+/*  To adjust the style of the input field*/
 .search {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #FFFFFF;
-    padding: 12px 30px;
+    padding: 12px 20px;
     width: 350px;
     border-radius: 10px;
 }
@@ -25,7 +26,9 @@ body {
     border: 2px solid #D96971;
 }
 .searchInput {
+    font-size: large;
     border: none;
+    outline: none;
     box-sizing: border-box;
     width: 100%;
     background-color: transparent;
@@ -33,8 +36,58 @@ body {
 .searchInput::placeholder {
     font-size: 18px;
 }
+.searchIcon {
+    cursor: pointer;
+}
+.navBar-right {
+    display: flex;
+    align-items: center;
+}
+a {
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 20px;
+}
+a:link {
+    text-decoration: none;
+    color: #282329;
+}
+a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #D96971;
+}
+img .navBar-cart {
+    padding: 60px;
+}
 .navBottom {
     background-color: #282329;
-    color: #FFFFFF;
-
+    color: #969696;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+.right-navBottom {
+    display: flex;
+    align-items: center;
+}
+div.right-navBottom {
+    padding: 50px 24px;
+    padding-left: 100px;
+}
+h3 {
+    margin-right: 100px;
+    cursor: pointer;
+    font-weight: 50;
+}
+
+hr {
+    height: 8px;
+    background-color: #F0F0F0;
+    border: none;
+  }
