--- a/style.css
+++ b/style.css
@@ -98,8 +98,10 @@ header {
     align-items: center;
     padding: 0px 30px;
     background-color: #D96971;
-    border-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     color: #F8F2ED;
+    font-size: 20px;
 }
 header p:hover {
     color: #553327;
